--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name":"employee-tracker", 
+  "name": "employee-tracker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
     "console.table": "^0.10.0",
-    "inquirer": "^8.0.0"
+    "inquirer": "^8.0.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {},
   "scripts": {
